# cc_forge

./: .cursorrules  .gitignore  AGENTS.md  CONTRIBUTING.md  DESIGN.md  README.md  ROADMAP.md  cc_forge.example.toml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  validate-ontology.yml
archive/: DESIGN.v1.md  old_issues.txt
docker/: AGENTS.md  CLAUDE.md  Dockerfile.agent  README.md  docker-compose.yml  entrypoint.sh  gh-shim.sh
docker/commands/: complexity-audit.md  self-review.md
docker/forgejo-runner/: config.yaml
docs/: AGENT-FRAMEWORK-EVALUATION.md  CLAUDE-CODE-LOCAL-MODELS.md  DOCKER-SETUP.md  DOGFOOD-WORKSTATION.md  FORGE-USAGE.md  LOCAL-OLLAMA-SETUP.md  PLAN-model-ontology.md  USAGE.md  WORKSTATION-SETUP.md  models-cpu-tier.md  models-intel-arc.md  models-quantization.md  ollama-cpu.service  ollama-ipex.service  ollama-ipex.service.legacy  ollama-vulkan.service
docs/models/: README.md  llama-70b.yaml
examples/: simple_orchestration.py
knowledge/: PROVENANCE.md
knowledge/project/: architecture.md
knowledge/schema/: TEMPLATE.md  entry.schema.json  model-entry.md  model-registry.schema.json  model-vocabularies.md
scripts/dogfood/: tesseract-forge  workstation-forge
scripts/eval/: README.md  run-matrix.sh  run-task.sh  screening-matrix-2.sh
scripts/remote-forge/: install  server-wrapper  workstation-wrapper
src/agents/: __init__.py  base.py  code_review.py  hello_world.py  reviewer.py  writer.py
src/cc_forge/: __init__.py  agents.py  cli.py  config.py  docker.py  git.py  (+4 more)
tests/: __init__.py
(+71 files in other folders)
