[project]
name = "cc-forge"
version = "0.1.0"
description = "Local-first AI development forge"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "docker>=7.0",
]

[project.scripts]
forge = "cc_forge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_forge"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-httpx>=0.36.0",
]
